/********************************************************************************
 * Copyright (c) 2026 Contributors to the Eclipse Foundation
 *
 * See the NOTICE file(s) distributed with this work for additional
 * information regarding copyright ownership.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Apache License Version 2.0 which is available at
 * https://www.apache.org/licenses/LICENSE-2.0
 *
 * SPDX-License-Identifier: Apache-2.0
 ********************************************************************************/
#ifndef SCORE_TIME_VEHICLE_TIME_VEHICLE_TIME_H
#define SCORE_TIME_VEHICLE_TIME_VEHICLE_TIME_H

#include "score/time/ptp/pdelay_measurement_data.h"
#include "score/time/ptp/time_slave_sync_data.h"
#include "score/time/clock/clock_status.h"

#include <score/callback.hpp>

#include <chrono>
#include <cstdint>
#include <map>
#include <sstream>
#include <string>

namespace score
{
namespace time
{

///
/// \brief Tag struct for the PTP-synchronized vehicle time domain.
///
/// Contains only domain types — no vtable, no factory, no virtual methods.
/// The implementation is hidden behind VehicleClockIface (see VehicleTime/vehicle_clock_iface.h).
///
struct VehicleTime
{
    ///
    /// \brief Enumeration expressing the synchronisation quality state of the vehicle time domain.
    /// Each enumerator is a **bit position** (not a bitmask).
    ///
    enum class StatusFlag : std::uint8_t
    {
        kTimeOut        = 0U, /*!< TB was not synchronized within a certain time frame. */
        kSynchronized   = 1U, /*!< The TB was synchronized at least once. */
        kSynchToGateway = 2U, /*!< The TB is in sync with the gateway. */
        kTimeLeapFuture = 3U, /*!< An adjustment greater than a certain threshold has been made. */
        kTimeLeapPast   = 4U, /*!< An adjustment back in time greater than a certain threshold has been made. */
        kUnknown        = 7U  /*!< Unknown status. */
    };

    using Duration  = std::chrono::nanoseconds;
    using Timepoint = std::chrono::time_point<VehicleTime, Duration>;

    static constexpr std::uint64_t kCallbackCapacity{64U};

    using TimeSlaveSyncDataReceivedCallback =
        score::cpp::callback<void(const TimeSlaveSyncData<VehicleTime>&), kCallbackCapacity>;
    using PDelayMeasurementFinishedCallback =
        score::cpp::callback<void(const PDelayMeasurementData<VehicleTime>&), kCallbackCapacity>;
};

// Explicit specialisations for ClockStatus<VehicleTime::StatusFlag>.
// Defined inline here so they are visible before VehicleTimeStatus uses them.

/// \brief Returns true if vehicle time is synchronized.
///
/// Synchronized := kSynchronized is set AND none of {kTimeOut, kTimeLeapFuture, kTimeLeapPast} is set.
template <>
inline bool ClockStatus<VehicleTime::StatusFlag>::IsSynchronized() const noexcept
{
    return (IsFlagActive(VehicleTime::StatusFlag::kSynchronized) &&
            (!IsAnyOfFlagsActive({VehicleTime::StatusFlag::kTimeOut,
                                  VehicleTime::StatusFlag::kTimeLeapFuture,
                                  VehicleTime::StatusFlag::kTimeLeapPast})));
}

/// \brief Returns true if the vehicle time status is in a valid (non-error) state.
///
/// Valid := kUnknown is NOT set, at least one non-kUnknown flag is set,
///          and kTimeLeapFuture and kTimeLeapPast are not both set simultaneously.
template <>
inline bool ClockStatus<VehicleTime::StatusFlag>::IsValid() const noexcept
{
    if (IsFlagActive(VehicleTime::StatusFlag::kUnknown))
    {
        return false;
    }
    if (!IsAnyOfFlagsActive({VehicleTime::StatusFlag::kTimeOut,
                             VehicleTime::StatusFlag::kSynchronized,
                             VehicleTime::StatusFlag::kSynchToGateway,
                             VehicleTime::StatusFlag::kTimeLeapFuture,
                             VehicleTime::StatusFlag::kTimeLeapPast}))
    {
        return false;
    }
    if (IsFlagActive(VehicleTime::StatusFlag::kTimeLeapFuture) &&
        IsFlagActive(VehicleTime::StatusFlag::kTimeLeapPast))
    {
        return false;
    }
    return true;
}

/// \brief Formats all active VehicleTime status flags into an ostringstream for diagnostics.
template <>
inline std::ostringstream ClockStatus<VehicleTime::StatusFlag>::PrintTo() const
{
    static const std::map<VehicleTime::StatusFlag, std::string> kFlagNames = {
        {VehicleTime::StatusFlag::kTimeOut,        "kTimeOut"},
        {VehicleTime::StatusFlag::kSynchronized,   "kSynchronized"},
        {VehicleTime::StatusFlag::kSynchToGateway, "kSynchToGateway"},
        {VehicleTime::StatusFlag::kTimeLeapFuture, "kTimeLeapFuture"},
        {VehicleTime::StatusFlag::kTimeLeapPast,   "kTimeLeapPast"},
        {VehicleTime::StatusFlag::kUnknown,        "kUnknown"},
    };
    std::ostringstream oss;
    oss << "[";
    for (const auto& entry : kFlagNames)
    {
        oss << entry.second << ": " << (IsFlagActive(entry.first) ? "true" : "false") << ", ";
    }
    oss << "]";
    return oss;
}

///
/// \brief Synchronisation-quality status snapshot for the vehicle time domain.
///
/// Bundled alongside the time-point inside ClockSnapshot<VehicleTime::Timepoint, VehicleTimeStatus>.
///
struct VehicleTimeStatus
{
    /// \brief Bit-flag quality indicators for the vehicle time signal.
    ClockStatus<VehicleTime::StatusFlag> flags{};

    /// \brief Fractional rate deviation of the local clock relative to the Grand Master.
    ///        Unit: dimensionless (e.g. 1.0e-9 == 1 ppb). Zero when kTimeOut is set.
    double rate_deviation{0.0};

    // Convenience delegates — avoid .flags. indirection at call sites.

    /// \brief Returns true if the vehicle time is currently synchronized.
    bool IsSynchronized() const noexcept
    {
        return flags.IsSynchronized();
    }

    /// \brief Returns true if the vehicle time is in a valid (non-error) state.
    bool IsValid() const noexcept
    {
        return flags.IsValid();
    }

    /// \brief Returns true if the given StatusFlag bit-position is active.
    bool IsFlagActive(const VehicleTime::StatusFlag flag) const noexcept
    {
        return flags.IsFlagActive(flag);
    }
};

}  // namespace time
}  // namespace score

#endif  // SCORE_TIME_VEHICLE_TIME_VEHICLE_TIME_H
